--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,23 +1,29 @@
+
 <div class="col-md-4">
-        <!-- Début de l'élément avec les vagues et l'icône -->
-        <div class="card box-shadow mx-auto my-5" style="width: 18rem;">
-          <!-- Image aléatoire -->
-          
-          <div class="card-body">
-            <!-- Titre du gossip -->
-            <h5 class="card-title"><%= @event.title %></h5>
-            <hr>
-            <!-- Auteur du gossip -->
-            <% if @event.admin %>
-              <p class="card-text">Par : <%= @event.admin.first_name %></p>
-            <% else %>
-              <p class="card-text">Par : Anonyme</p>
-            <% end %>
-            <!-- Contenu du gossip -->
-            <p class="card-text"><%= @event.description %></p>
-            <!-- Bouton Voir plus -->
-            <%= link_to "Voir plus", event_path(@event), class: "btn btn-primary" %>
-          </div>
-        </div>
-        <!-- Fin de l'élément avec les vagues et l'icône -->
-      </div>
+  <div class="card box-shadow mx-auto my-5" style="width: 18rem;">
+    <div class="card-body">
+      <!-- Titre de l'événement -->
+      <h5 class="card-title"><%= @event.title %></h5>
+      <hr>
+      <!-- Auteur de l'événement -->
+      <% if @event.admin %>
+        <p class="card-text">Par : <%= @event.admin.first_name %> (<%= @event.admin.email %>)</p>
+      <% else %>
+        <p class="card-text">Par : Anonyme</p>
+      <% end %>
+      <!-- Contenu de l'événement -->
+      <p class="card-text"><%= @event.description %></p>
+      <!-- Nombre d'inscrits à l'événement -->
+      <p class="card-text">Nombre d'inscrits : <%= @event.users.count %></p>
+      <!-- Date de début de l'événement -->
+      <p class="card-text">Date de début : <%= @event.start_date %></p>
+      <!-- Date de fin de l'événement -->
+      <p class="card-text">Date de fin : <%= @event.end_date %></p>
+      <!-- Lieu de l'événement -->
+      <p class="card-text">Lieu : <%= @event.location %></p>
+      <!-- Prix de l'événement -->
+      <p class="card-text">Prix : <%= number_to_currency(@event.price) %></p>
+    </div>
+  </div>
+</div>
+      
